IJPL-149878 IJent WSL FS refactoring: move VM options util functions to `IjentWslNioFsVmOptionsSetter`
The functions were in `IjentWslNioFsToggler` and they were non-static. It led to problems:
* Checking VM options required to initialize the service `IjentWslNioFsToggler` which initializes the filesystem, causing race conditions in enabling/disabling code in the benchmark test.
* If something has "vmoptions" in the name, it should be in "vmoptions" class, especially when such a class exists.

GitOrigin-RevId: dc228c196799300461b1b287bc5a1428bb0b91f4